--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
+    "moment": "^2.29.1",
+    "qs": "^6.10.1",
     "socket.io": "^4.3.1",
     "socket.io-client": "^4.3.2",
     "vue": "^2.6.11",
