--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "dependencies": {
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
+    "element-ui": "^2.15.6",
+    "js-cookie": "^3.0.1",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "qs": "^6.10.1",
     "socket.io": "^4.3.1",
